# zopy

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
src/zopy/: __init__.py
src/zopy/auth/: auth_setup.py  oauth.py  token_manager.py
src/zopy/cli/: cli.py
src/zopy/clients/: __init__.py
src/zopy/clients/crm/: client.py
src/zopy/core/: client.py  errors.py  logging.py
src/zopy/network/: __init__.py  async_request.py  headers.py  request.py  retry.py  throttling.py
