[build-system]
requires = ["setuptools", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "zopy"
version = "0.1.0"
description = "ZoPy: A Python client for Zoho APIs"
readme = "README.md"
authors = [{ name = "Michael G. Perdue", email = "michael@mperdue.dev" }]
dependencies = [
    "requests"
]
requires-python = ">=3.7"
license = {text = "MIT"}

[project.urls]
"Homepage" = "https://github.com/yourusername/zopy"
"Documentation" = "https://github.com/yourusername/zopy"
"Source" = "https://github.com/yourusername/zopy"