[metadata]
name = zopy
version = 0.1.0
description = ZoPy: A Python client for Zoho APIs
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = MIT
license_file = LICENSE
url = https://github.com/yourusername/zopy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir = =src
python_requires = >=3.7
install_requires =
    requests

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 88
exclude = .git,__pycache__,docs/source,build,dist